@@ -1,0 +1,8 @@
+*.so
+*.a
+Makefile
+tkConfig.sh
+tktest
+wish
+config.cache
+config.status
